# origin

./: .gitignore
Course_Work_02/Race_Simulator/: Race_Simulator.sln  Race_Simulator.vcxproj  Race_Simulator.vcxproj.filters
Lesson011/Lesson011/Lsn011_Tsk05/: CMakeLists.txt
Lesson011/Lsn011_Tsk02/LeaverDynamicLibrary/: Leaver.h  (+3 more)
Lesson011/Lsn011_Tsk03/: CMakeLists.txt
Lesson011/Lsn011_Tsk03/LeaverCMake/: LeaverCMake.vcxproj  LeaverCMakeSource.cpp
Lesson011/Lsn011_Tsk03/LeaverDynamicLibrary/: LeaverDynamicLibrary.vcxproj  LeaverDynamicLibrary.vcxproj.filters  LeaverDynamicSource.cpp
Lesson_001/Task_1/: IDE_code.txt  README.md
Lesson_004/Lsn04_Tsk01/: Lsn04_Tsk01.cpp  Lsn04_Tsk01.sln  Lsn04_Tsk01.vcxproj  Lsn04_Tsk01.vcxproj.filters
Lesson_004/Lsn04_Tsk02/: Lsn04_Tsk02.cpp  Lsn04_Tsk02.sln  Lsn04_Tsk02.vcxproj  Lsn04_Tsk02.vcxproj.filters  in.txt
Lesson_005/Lsn05_Tsk01/: Lsn05_Tsk01.cpp  Lsn05_Tsk01.sln  Lsn05_Tsk01.vcxproj  Lsn05_Tsk01.vcxproj.filters
Lesson_005/Lsn05_Tsk02/: Lsn05_Tsk02.cpp  Lsn05_Tsk02.sln  Lsn05_Tsk02.vcxproj  Lsn05_Tsk02.vcxproj.filters
Lesson_005/Lsn05_Tsk03/: Lsn05_Tsk03.cpp  Lsn05_Tsk03.sln  Lsn05_Tsk03.vcxproj  Lsn05_Tsk03.vcxproj.filters
Lesson_006/Lsn06_Tsk03/untitled30/: CMakeLists.txt  EquilateralTriangle.cpp  IsoscelesTriangle.cpp  Parallelogram.cpp  RectangleF.cpp  RightTriangle.cpp  Romb.cpp  Square.cpp  Triangle.cpp  equilateraltriangle.h  isoscelestriangle.h  main.cpp  parallelogram.h  quadrangle.h  rectanglef.h  righttriangle.h  romb.h  square.h  triangle.h
Lesson_007/Lsn07_Tsk01/: CMakeLists.txt  main.cpp
Lesson_007/Lsn07_Tsk02/: CMakeLists.txt  main.cpp
Lesson_009/Lsn09_Tsk01/: CMakeLists.txt  main.cpp
Lesson_009/Lsn09_Tsk02/: CMakeLists.txt  main.cpp
Lesson_010/Lsn010_Tsk02/: CMakeLists.txt  Figure.cpp  Quadrangle.cpp  equilateraltriangle.h  figure.h  parallelogram.h  quadrangle.h  rectanglef.h  righttriangle.h
Lesson_010/my_first_cmake_project/: CMakeLists.txt  main.cpp
Lesson_011/Lsn011_Tsk03/: CMakeLists.txt
Lesson_011/Lsn011_Tsk05/: CMakeLists.txt
Lesson_011/Lsn011_Tsk05/ClassDynamicLibrary/: equilateraltriangle.h  figure.h  isoscelestriangle.h  parallelogram.h  quadrangle.h  rectanglef.h  righttriangle.h  romb.h  square.h  triangle.h
Lesson_012/: Functions commts.txt
Lesson_012/Lsn012_Tsk01/: Lsn012_Tsk01.cpp  Lsn012_Tsk01.sln  Lsn012_Tsk01.vcxproj  Lsn012_Tsk01.vcxproj.filters
Lesson_013/Lsn013_Tsk01/: Lsn013_Tsk01.cpp  Lsn013_Tsk01.sln  Lsn013_Tsk01.vcxproj  Lsn013_Tsk01.vcxproj.filters
Lesson_013/Lsn013_Tsk02/: Lsn013_Tsk02.cpp  Lsn013_Tsk02.sln  Lsn013_Tsk02.vcxproj  Lsn013_Tsk02.vcxproj.filters
Lesson_014/Lsn014_Tsk01/: Lsn014_Tsk01.cpp  Lsn014_Tsk01.sln  Lsn014_Tsk01.vcxproj  Lsn014_Tsk01.vcxproj.filters
Lesson_014/Lsn014_Tsk02/: Lsn014_Tsk02.cpp  Lsn014_Tsk02.sln  Lsn014_Tsk02.vcxproj  Lsn014_Tsk02.vcxproj.filters
Lesson_014/Lsn014_Tsk03/: Lsn014_Tsk03.cpp  Lsn014_Tsk03.sln  Lsn014_Tsk03.vcxproj  Lsn014_Tsk03.vcxproj.filters
(+151 files in other folders)
